--- a/src/grammaire/.gitignore
+++ b/src/grammaire/.gitignore
@@ -164,3 +164,33 @@
 /ASTTransformee_relation.java
 /ASTTÃªte_suite.java
 /.gitignore
+/ASTSubstitution.java
+/ASTSubstitution_corps_operation.java
+/ASTSubstitution_appel_operation.java
+/ASTSubstitution_assertion.java
+/ASTSubstitution_bloc.java
+/ASTSubstitution_cas.java
+/ASTSubstitution_choix_borne.java
+/ASTSubstitution_choix_non_borne.java
+/ASTSubstitution_conditionnelle.java
+/ASTSubstitution_definition_locale.java
+/ASTSubstitution_devient_egal.java
+/ASTSubstitution_devient_elt_de.java
+/ASTSubstitution_devient_tel_que.java
+/ASTSubstitution_identite.java
+/ASTSubstitution_precondition.java
+/ASTSubstitution_selection.java
+/ASTSubstitution_sequence.java
+/ASTSubstitution_simultanee.java
+/ASTSubstitution_variable_locale.java
+/ASTIdent_ren.java
+/ASTListe_ident.java
+/ASTEnsemble_simple.java
+/ASTInsertion_tete.java
+/ASTRestriction_tete.java
+/ASTTete_suite.java
+/ASTInstruciton_variable_locale.java
+/ASTEnsemble_booleen.java
+/ASTEnsemble_chaines.java
+/ASTSoustraction_domaine.java
+/ASTDifference.java
