Correction de récursivités à gauche indirecte
Creation d'un noeuds Substitution_binaire et Predicat_binaire pour
éviter le problèmes de récursivit&é

--- a/src/grammaire/.gitignore
+++ b/src/grammaire/.gitignore
@@ -194,3 +194,5 @@
 /ASTEnsemble_chaines.java
 /ASTSoustraction_domaine.java
 /ASTDifference.java
+/ASTPredicat_binaire.java
+/ASTSubstitution_binaire.java
