--- a/src/grammaire/.gitignore
+++ b/src/grammaire/.gitignore
@@ -194,3 +194,6 @@
 /ASTEnsemble_chaines.java
 /ASTSoustraction_domaine.java
 /ASTDifference.java
+/ASTPredicat_binaire.java
+/ASTSubstitution_binaire.java
+/ASTExpression_d_arbres.java
