Fin decorateur (je crois)

--- a/src/grammaire/.gitignore
+++ b/src/grammaire/.gitignore
@@ -33,3 +33,135 @@
 /ASTTransformée_relation.java
 /ASTUnionGeneralisee.java
 /ASTEnsComprehension.java
+/ASTAbstractConstants.java
+/ASTAbstractVariables.java
+/ASTBijection_totale.java
+/ASTBoolean_Lit.java
+/ASTCodomaine.java
+/ASTComposition.java
+/ASTConcreteConstants.java
+/ASTConcreteVariables.java
+/ASTCondition.java
+/ASTConstraints.java
+/ASTConstruction_d_ensembles.java
+/ASTConstruction_de_fonctions.java
+/ASTConversion_bool.java
+/ASTDeuxieme_projection.java
+/ASTDomaine.java
+/ASTEnTete.java
+/ASTEns_comprehension.java
+/ASTEnsemble.java
+/ASTEnsemble_booleen.java
+/ASTEnsemble_chaines.java
+/ASTEnsemble_entier.java
+/ASTEnsemble_simple.java
+/ASTEnsemble_vide.java
+/ASTEnteteOperation.java
+/ASTEntier_Lit.java
+/ASTEvaluation_fonction.java
+/ASTExprArith.java
+/ASTExpr_parenthesee.java
+/ASTExpr_tableau.java
+/ASTExpression.java
+/ASTExpression_booleenne.java
+/ASTExpression_d_ensembles.java
+/ASTExpression_de_relations.java
+/ASTExpression_primaire.java
+/ASTFonction_partielle.java
+/ASTFonction_totale.java
+/ASTIdent_ren.java
+/ASTIdentite.java
+/ASTInitialisation.java
+/ASTInjection_partielle.java
+/ASTInjection_totale.java
+/ASTInstruciton_variable_locale.java
+/ASTInstruction.java
+/ASTInstruction_appel_operation.java
+/ASTInstruction_assertion.java
+/ASTInstruction_bloc.java
+/ASTInstruction_cas.java
+/ASTInstruction_conditionnelle.java
+/ASTInstruction_corps_operation.java
+/ASTInstruction_devient_egal.java
+/ASTInstruction_sequence.java
+/ASTIntersection.java
+/ASTIntersection_generalisee.java
+/ASTIntersection_quantifiee.java
+/ASTIntervalle.java
+/ASTInvariant.java
+/ASTLambda_expression.java
+/ASTListe_ident.java
+/ASTMachine.java
+/ASTOperation.java
+/ASTOperations.java
+/ASTPredicat_Appartenance.java
+/ASTPredicat_Egalite.java
+/ASTPredicat_Existentiel.java
+/ASTPredicat_Inclusion.java
+/ASTPredicat_Inegalite.java
+/ASTPredicat_Inferieur_Ou_Egal.java
+/ASTPredicat_Insclusion_Stricte.java
+/ASTPredicat_Negation.java
+/ASTPredicat_Non_Inclusion.java
+/ASTPredicat_Non_Inclusion_Stricte.java
+/ASTPredicat_Not_Appartenance.java
+/ASTPredicat_Strictement_Inferieur.java
+/ASTPredicat_Strictement_Superieur.java
+/ASTPredicat_Superieur_Ou_Egal.java
+/ASTPredicat_Universel.java
+/ASTPredicat_parenthese.java
+/ASTPremiere_projection.java
+/ASTProduit_direct.java
+/ASTProduit_parallele.java
+/ASTProperties.java
+/ASTRestriction_codomaine.java
+/ASTRestriction_domaine.java
+/ASTSets.java
+/ASTSous_ensembles.java
+/ASTSous_ensembles_finis.java
+/ASTStart.java
+/ASTSubstitution.java
+/ASTSubstitution_appel_operation.java
+/ASTSubstitution_assertion.java
+/ASTSubstitution_bloc.java
+/ASTSubstitution_cas.java
+/ASTSubstitution_choix_borne.java
+/ASTSubstitution_choix_non_borne.java
+/ASTSubstitution_conditionnelle.java
+/ASTSubstitution_corps_operation.java
+/ASTSubstitution_definition_locale.java
+/ASTSubstitution_devient_egal.java
+/ASTSubstitution_devient_elt_de.java
+/ASTSubstitution_devient_tel_que.java
+/ASTSubstitution_identite.java
+/ASTSubstitution_precondition.java
+/ASTSubstitution_selection.java
+/ASTSubstitution_tant_que.java
+/ASTSubstitution_variable_locale.java
+/ASTSurcharge.java
+/ASTSurjection_partielle.java
+/ASTSurjection_totale.java
+/ASTTerme.java
+/ASTTermeSimple.java
+/ASTTerme_record.java
+/ASTUnion.java
+/ASTUnion_generalisee.java
+/ASTUnion_quantifiee.java
+/ASTValue.java
+/ASTValues.java
+/ASTpredicat.java
+/Node.java
+/ParseException.java
+/ParserB.java
+/ParserBConstants.java
+/ParserBDefaultVisitor.java
+/ParserBTokenManager.java
+/ParserBTreeConstants.java
+/ParserBVisitor.java
+/SimpleCharStream.java
+/SimpleNode.java
+/Token.java
+/TokenMgrError.java
+/parserB.jj
+/ASTSubstitution_sequence.java
+/ASTSubstitution_simultanee.java
